--- a/html/Home.html
+++ b/html/Home.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Bootstrap Example</title>
-    <link rel="stylesheet" type="text/css" href="Home.css">
+    <link rel="stylesheet" type="text/css" href="../css/Home.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,13 +17,13 @@
     <h5 class="maintitle">Top recommended</h5>
     <div class="row">
         <div class="col-7">
-            <img class="playscreen" src="play.png">
+            <img class="playscreen" src="../assets/play.png">
         </div>
         <div class="upnext col-5">
             <h5 class="maintitle">Up next</h5>
             <div>
                 <div class="d-flex flex-row movies">
-                    <img class="poster" src="Arrival.jpg">
+                    <img class="poster" src="../assets/Arrival.jpg">
                     <div class="review">
                         <h5>Arrival</h5>
                         <p>Reviews: 100</p>
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="d-flex flex-row movies">
-                    <img class="poster" src="Arrival.jpg">
+                    <img class="poster" src="../assets/Arrival.jpg">
                     <div class="review">
                         <h5>Arrival</h5>
                         <p>Reviews: 100</p>
@@ -46,7 +46,7 @@
         <div class="col-9">
             <h5 class="maintitle">News</h5>
             <div class="d-flex flex-row news">
-                <img class="newsposter" src="new.jpeg">
+                <img class="newsposter" src="../assets/new.jpeg">
                 <div class="review">
                     <h5>New_title_1</h5>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, aspernatur eligendi error
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="d-flex flex-rowrow news">
-                <img class="newsposter" src="new.jpeg">
+                <img class="newsposter" src="../assets/new.jpeg">
                 <div class="review">
                     <h5>New_title_1</h5>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora, aspernatur eligendi error
@@ -69,7 +69,7 @@
         <div class="col-3">
             <h5 class="maintitle">Recent</h5>
             <div class="d-flex flex-row movies">
-                <img class="poster" src="Arrival.jpg">
+                <img class="poster" src="../assets/Arrival.jpg">
                 <div class="review">
                     <h5>Arrival</h5>
                     <p>Reviews: 100</p>
@@ -77,7 +77,7 @@
                 </div>
             </div>
             <div class="d-flex flex-row movies">
-                <img class="poster" src="Arrival.jpg">
+                <img class="poster" src="../assets/Arrival.jpg">
                 <div class="review">
                     <h5>Arrival</h5>
                     <p>Reviews: 100</p>
