--- a/html/Latestnew.html
+++ b/html/Latestnew.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Bootstrap Example</title>
-    <link rel="stylesheet" type="text/css" href="Home.css">
+    <link rel="stylesheet" type="text/css" href="../css/Home.css">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -33,6 +33,7 @@
         </div>
     </div>
 </div>
+
 <body class="container body">
     <div class="row">
         <div class="col-9">
