--- a/html/search.html
+++ b/html/search.html
@@ -37,10 +37,17 @@
             </ul>
         </div>
 
-        <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+            integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+        <div class="">
+            <div class="searchbar">
+                <img id="search_icon_btn" src="../assets/search-icon.png" alt="">
+                <input class="search_input" type="text" name="" placeholder="">
+                <button type="button" class="btn btn-secondary btn-sm">SEARCH</button>
+
+            </div>
+        </div>
 
         <div id="userSection">
             <div id="userInfoSection">
@@ -52,8 +59,13 @@
     </nav>
 
 
+
+    <h2>Search result for "Movie"</h2>
+
+
+
+
     <div class="container">
-        <h2>Search result for "Movie"</h2>
         <h3>Movie/TV</h3>
         <div class="row">
             <div class="col">
@@ -88,7 +100,6 @@
             ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum.
-            <hr>
         </div>
         <div class="">
             <b>Title 2</b><br>
@@ -97,7 +108,6 @@
             ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum.
-            <hr>
         </div>
         <div class="">
             <b>Title 3</b><br>
@@ -106,7 +116,6 @@
             ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum.
-            <hr>
         </div>
     </div>
 </body>
