--- a/html/search.html
+++ b/html/search.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-md">
         <!-- Brand -->
-        <a class="navbar-brand" href="#">ReMov</a>
+        <a id="titleRemov" class="navbar-brand">ReMov</a>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -72,21 +72,21 @@
 
                 <img src="https://c4.wallpaperflare.com/wallpaper/410/867/750/vector-forest-sunset-forest-sunset-forest-wallpaper-thumb.jpg"
                     class="img-thumbnail" alt="Cinque Terre">
-                <h3>Movie1</h3>
+                <h4>Movie1</h4>
 
             </div>
             <div class="col">
 
                 <img src="https://c4.wallpaperflare.com/wallpaper/410/867/750/vector-forest-sunset-forest-sunset-forest-wallpaper-thumb.jpg"
                     class="img-thumbnail" alt="Cinque Terre">
-                <h3>Movie2</h3>
+                <h4>Movie2</h4>
 
             </div>
             <div class="col">
 
                 <img src="https://c4.wallpaperflare.com/wallpaper/410/867/750/vector-forest-sunset-forest-sunset-forest-wallpaper-thumb.jpg"
                     class="img-thumbnail" alt="Cinque Terre">
-                <h3>Movie3</h3>
+                <h4>Movie3</h4>
 
             </div>
         </div>
@@ -101,6 +101,7 @@
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum.
         </div>
+        <br>
         <div class="">
             <b>Title 2</b><br>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -109,6 +110,7 @@
             nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
             anim id est laborum.
         </div>
+        <br>
         <div class="">
             <b>Title 3</b><br>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
