--- a/html/news_1.html
+++ b/html/news_1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/search.css">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -11,45 +12,54 @@
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <title>News title</title>
 </head>
+<nav class="navbar navbar-expand-md">
+    <!-- Brand -->
+    <a id="titleRemov" class="navbar-brand" style="color: white;">ReMov</a>
+
+    <!-- Toggler/collapsibe Button -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a id="newsBtn" class="nav-link" href="#">News</a>
+            </li>
+            <li class="nav-item">
+                <a id="categoryBtn" class="nav-link" href="#">Category</a>
+            </li>
+            <li class="nav-item">
+                <a id="aboutBtn" class="nav-link" href="#">About</a>
+            </li>
+        </ul>
+    </div>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+    <div class="">
+        <div class="searchbar">
+            <img id="search_icon_btn" src="../assets/search-icon.png" alt="">
+            <input class="search_input" type="text" name="" placeholder="">
+            <button type="button" class="btn btn-secondary btn-sm"
+                style="width: 70px  ; border-radius: 30px;">SEARCH</button>
+
+        </div>
+    </div>
+
+    <div id="userSection">
+        <div id="userInfoSection">
+            <p id="username">Thang</p>
+            <p id="status">New user</p>
+        </div>
+        <img id="userAvatar" src="../assets/user.png" alt="Avatar">
+    </div>
+</nav>
 
 <body style="background-color: #575555;">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>
 
     <div class="center-screen">
         <div class="row">
