--- a/html/Home.html
+++ b/html/Home.html
@@ -17,7 +17,7 @@
 <body style="background-color: #575555; color: white;">
     <nav class="navbar navbar-expand-md">
         <!-- Brand -->
-        <a id="titleRemov" class="navbar-brand">ReMov</a>
+        <a id="titleRemov" class="navbar-brand" style="color: white;" href="Home.html">ReMov</a>
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -28,13 +28,34 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a id="newsBtn" class="nav-link" href="#">News</a>
+                    <div class="dropdown">
+                        <a id="newsBtn" class="nav-link dropbtn" href="#">News</a>
+                        <div class="dropdown-content">
+                            <a href="#">Lasted</a>
+                            <a href="#">Trending</a>
+                        </div>
+                    </div>
+
                 </li>
                 <li class="nav-item">
-                    <a id="categoryBtn" class="nav-link" href="#">Category</a>
+                    <div class="dropdown">
+                        <a id="categoryBtn" class="nav-link dropbtn" href="#">Category</a>
+                        <div class="dropdown-content">
+                            <a href="#">Movies</a>
+                            <a href="#">TV series</a>
+                            <a href="#">In Threaters</a>
+                            <a href="#">Coming soon</a>
+                        </div>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a id="aboutBtn" class="nav-link" href="#">About</a>
+                    <div class="dropdown">
+                        <a id="aboutBtn" class="nav-link dropbtn" href="#">About</a>
+                        <div class="dropdown-content">
+                            <a href="#">Lasted</a>
+                            <a href="#">Trending</a>
+                        </div>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -93,7 +114,7 @@
             <div class="col-9">
                 <h5 class="maintitle">News</h5>
                 <div class="d-flex flex-row news">
-                    <img class="newsposter" src="../assets/lion-king-main.jpg">
+                    <img class="newsposter" src="../assets/lion-king-main.jpg" onclick="location.href = 'news_1.html'">
                     <div class="review">
                         <h5>The Lion King Sequel Coming From Moonlight Director Barry Jenkins</h5>
                         <p>If it didn’t necessarily win everyone over on an artistic level with its highly faithful take
