--- a/html/news_1.html
+++ b/html/news_1.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/search.css">
+    <link rel="stylesheet" href="../css/Home.css">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -14,7 +15,7 @@
 </head>
 <nav class="navbar navbar-expand-md">
     <!-- Brand -->
-    <a id="titleRemov" class="navbar-brand" style="color: white;">ReMov</a>
+    <a id="titleRemov" class="navbar-brand" style="color: white;" href="Home.html">ReMov</a>
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -25,13 +26,34 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a id="newsBtn" class="nav-link" href="#">News</a>
+                <div class="dropdown">
+                    <a id="newsBtn" class="nav-link dropbtn" href="#" style="font-size: 24px;">News</a>
+                    <div class="dropdown-content">
+                        <a href="#">Lasted</a>
+                        <a href="#">Trending</a>
+                    </div>
+                </div>
+
             </li>
             <li class="nav-item">
-                <a id="categoryBtn" class="nav-link" href="#">Category</a>
+                <div class="dropdown">
+                    <a id="categoryBtn" class="nav-link dropbtn" href="#" style="font-size: 24px;">Category</a>
+                    <div class="dropdown-content">
+                        <a href="#">Movies</a>
+                        <a href="#">TV series</a>
+                        <a href="#">In Threaters</a>
+                        <a href="#">Coming soon</a>
+                    </div>
+                </div>
             </li>
             <li class="nav-item">
-                <a id="aboutBtn" class="nav-link" href="#">About</a>
+                <div class="dropdown">
+                    <a id="aboutBtn" class="nav-link dropbtn" href="#" style="font-size: 24px;">About</a>
+                    <div class="dropdown-content">
+                        <a href="#">Lasted</a>
+                        <a href="#">Trending</a>
+                    </div>
+                </div>
             </li>
         </ul>
     </div>
