--- a/html/search.html
+++ b/html/search.html
@@ -10,15 +10,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../css/search.css">
+    <link rel="stylesheet" href="../css/Home.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md">
         <!-- Brand -->
-        <a id="titleRemov" class="navbar-brand">ReMov</a>
+        <a id="titleRemov" class="navbar-brand" onclick="location.href = 'news_1.html'">ReMov</a>
 
         <!-- Toggler/collapsibe Button -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" style="color: white;"
+            data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -26,13 +29,34 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a id="newsBtn" class="nav-link" href="#">News</a>
+                    <div class="dropdown">
+                        <a id="newsBtn" class="nav-link dropbtn" href="#">News</a>
+                        <div class="dropdown-content">
+                            <a href="#">Lasted</a>
+                            <a href="#">Trending</a>
+                        </div>
+                    </div>
+
                 </li>
                 <li class="nav-item">
-                    <a id="categoryBtn" class="nav-link" href="#">Category</a>
+                    <div class="dropdown">
+                        <a id="categoryBtn" class="nav-link dropbtn" href="#">Category</a>
+                        <div class="dropdown-content">
+                            <a href="#">Movies</a>
+                            <a href="#">TV series</a>
+                            <a href="#">In Threaters</a>
+                            <a href="#">Coming soon</a>
+                        </div>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a id="aboutBtn" class="nav-link" href="#">About</a>
+                    <div class="dropdown">
+                        <a id="aboutBtn" class="nav-link dropbtn" href="#">About</a>
+                        <div class="dropdown-content">
+                            <a href="#">Lasted</a>
+                            <a href="#">Trending</a>
+                        </div>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -44,7 +68,7 @@
             <div class="searchbar">
                 <img id="search_icon_btn" src="../assets/search-icon.png" alt="">
                 <input class="search_input" type="text" name="" placeholder="">
-                <button type="button" class="btn btn-secondary btn-sm">SEARCH</button>
+                <button type="button" class="btn btn-secondary btn-sm" style="border-radius: 30px;">SEARCH</button>
 
             </div>
         </div>
